@@ -147,7 +147,8 @@ typedef enum {
 	EXIF_TAG_SUBJECT_DISTANCE_RANGE		= 0xa40c,
 	EXIF_TAG_IMAGE_UNIQUE_ID		= 0xa420,
 	EXIF_TAG_GAMMA				= 0xa500,
-	EXIF_TAG_PRINT_IMAGE_MATCHING		= 0xc4a5
+	EXIF_TAG_PRINT_IMAGE_MATCHING		= 0xc4a5,
+	EXIF_TAG_PADDING			= 0xea1c
 } ExifTag;
 
 /* GPS tags overlap with above ones. */
